--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </article>
 </main>
 
-    <footer>Site criado por <a href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">CursoemVideo</a>.</footer>   
+    <footer>Site criado por <a href="https://github.com/joaonakao?tab=repositories" target="_blank">João Nakao</a> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">CursoemVideo</a>.</footer>   
     
 </body>
 </html>
